--- a/Client/Components/CategoryComponent.razor
+++ b/Client/Components/CategoryComponent.razor
@@ -124,7 +124,7 @@
     }
 </div>
 <hr/>
-@if (searchedSubCat!=null && searchedSubCat>0)
+@if (searchedSubCats!=null && searchedSubCats.Count > 0)
 {
     isAccordionClick = true;
     getSearchedSubCat();
@@ -182,7 +182,7 @@
     public OverDraftBudgetToEdit givingSubCat { get; set; }
 
     [Parameter]
-    public int searchedSubCat { get; set; }
+    public List<int> searchedSubCats { get; set; }
 
 
     public bool isAccordionClick = false;
@@ -440,22 +440,28 @@
 
     public async Task getSearchedSubCat()
     {
-        
-        var subCatRes = await Http.GetAsync("api/Present/GetSubCategory/" + searchedSubCat);
-        if (subCatRes.IsSuccessStatusCode)
+        subCategories = new List<SubCategoryToShow>();
+        foreach(int sb in searchedSubCats)
         {
-            SubCategoryToShow selectedSubCat = await subCatRes.Content.ReadFromJsonAsync<SubCategoryToShow>();
+            var subCatRes = await Http.GetAsync("api/Present/GetSubCategory/" + sb);
+            if (subCatRes.IsSuccessStatusCode)
+            {
+                SubCategoryToShow selectedSubCat = await subCatRes.Content.ReadFromJsonAsync<SubCategoryToShow>();
 
-            subCategories = new List<SubCategoryToShow>();
-            subCategories.Add(selectedSubCat);
-            makeSearchfuncAgain();
-            isAccordionClick = true;
-            subCatRefreshed = false;
+                
+                subCategories.Add(selectedSubCat);
+                
+            }
+            else
+            {
+                Console.WriteLine("no subcategories found");
+            }
         }
-        else
-        {
-            Console.WriteLine("no subcategories found");
-        }
+
+        makeSearchfuncAgain();
+        isAccordionClick = true;
+        subCatRefreshed = false;
+        
     }
 
     void makeSearchfuncAgain()
